fix spacing & font size issue on the cellar view

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -112,3 +112,6 @@ $desktop-space-size-2-minus: calc(-100vw + 1280px - 4rem);
 $desktop-right-size-2: calc(100% + 100vw - 1280px + 4rem);
 
 $localImagePath: '/assets/images/' !default;
+
+$desktop-border-radius: 8px;
+$mobile-border-radius: 5px;
